base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: wordpress-lab
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql
